--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,35 @@
-#puzzle{
+/* #puzzle {
     width: 450px;
     height: 450px;
+} */
 
-}
-#puzzle input{
+#puzzle input {
 
     width: 50px;
     height: 50px;
     box-sizing: border-box;
     border-spacing: 0;
-    border:1px grey solid
-} 
+    border: 1px grey solid
+}
+
+/* #box-shade input[type="number"] {
+    background-color: #e41a1a;
+} */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    text-align: center;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+    text-align: center;
+}
+
+input.shaded-box {
+    background-color: #D3D3D3;
+}
