--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,29 @@
-/* #puzzle {
-    width: 450px;
-    height: 450px;
-} */
+html,
+body {
+    height: 100%;
+}
 
-#puzzle input {
+body {
+    display: flex;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+}
 
+.form-sudoku {
+    width: 100%;
+    padding: 15px;
+    margin: auto;
+}
+
+#sudokuTable tr td input {
     width: 50px;
     height: 50px;
     box-sizing: border-box;
     border-spacing: 0;
     border: 1px grey solid
 }
-
-/* #box-shade input[type="number"] {
-    background-color: #e41a1a;
-} */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -31,5 +40,5 @@ input[type=number] {
 }
 
 input.shaded-box {
-    background-color: #D3D3D3;
+    background-color: #DCDCDC;
 }
